# cortex_m4_sim

./: Cargo.toml  Project.axf  README.md  bench_timer.rs  delay.axf  disassembly_detail.asm  disassembly_report.txt  disassembly_report_clean.txt  empty_test.axf  io_toggle.axf  output.txt  project.hex  run_test.txt  target.axf  test.hex  test.txt  test_out.txt  timer.axf  uart.axf  uart_helloworld.axf  uart_loop.axf  uart_systick.axf
perf_reports/: instruction_def_build_sorted.csv  instruction_exec_definition_sorted.csv  instruction_exec_mnemonic_sorted.csv  instruction_exec_sorted.csv
src/: arch.rs  context.rs  cpu.rs  main.rs  mod.rs  perf_tests.rs  simulator.rs
src/disassembler/: mod.rs  parser.rs  writer.rs
src/jit_engine/: compiler.rs  engine.rs  mod.rs  table.rs
src/jit_engine/clif/: adr.rs  control.rs  data.rs  instructions.rs  ldr.rs  memory.rs  misc.rs  mod.rs
src/opcodes/: decoded.rs  instruction.rs  mod.rs  opcode.rs  thumb_runtime.rs
src/opcodes/Instructions/: adr.rs  bit_field.rs  bitop.rs  branch.rs  breakpoint.rs  calculate.rs  cmp.rs  compare_branch.rs  extend.rs  hint.rs  it.rs  ldm.rs  ldr.rs  mod.rs  mov.rs  movs.rs  nop.rs  shift.rs  stack.rs  stm.rs  str.rs  tst.rs
src/peripheral/: afio.rs  bus.rs  flash.rs  gpio.rs  mod.rs  nvic.rs  peripheral.rs  rcc.rs  scb.rs  systick.rs  timer.rs  uart.rs
src/tcg/: mod.rs  tcg.rs
