[package]
name = "cortex_m4_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
capstone = "0.14.0"
cranelift = "0.129.1"
cranelift-jit = "0.129.1"
cranelift-module = "0.129.1"
hex = "0.4.3"
ihex = "3.0.0"
object = "0.38.1"
once_cell = "1.21.3"
regex = "1.12.2"
rustc-hash = "2.1.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

